# CG_Project

./: CMakeLists.txt  README.md
media/shaders/: gbuffer.vert  hdr_quad.frag  lightening.frag  lightening.vert  ssao.frag  ssao.vert  ssao_blur.frag
src/: hello_triangle.cpp  hello_triangle.h  main.cpp  maze_app.cpp  maze_app.h  model.cpp  model.h
src/base/: camera.cpp  camera.h  frustum.h  scene_roaming.cpp  scene_roaming.h  skybox.cpp  texture2d.cpp  texture_cubemap.cpp  transform.cpp
src/shaders/: gbuffer.frag  lightening.frag  quad.vert
